--- a/backend/package.json
+++ b/backend/package.json
@@ -18,12 +18,18 @@
   "homepage": "https://github.com/apsinghrana100/Real_time_Tic_toe_game#readme",
   "dependencies": {
     "axios": "^1.8.4",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.1",
     "mysqli": "^3.1.4",
+    "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.9",
+    "utf-8-validate": "^6.0.5"
   }
 }
