--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.1",
     "mysqli": "^3.1.4",
+    "path": "^0.12.7",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
   },
