--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,8 @@
   "description": "This backend repo managing tic_tac_toe_logic and real time updation",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "latest": "^0.2.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.1",
     "mysqli": "^3.1.4",
